--- a/src/App.css
+++ b/src/App.css
@@ -109,3 +109,30 @@
   height: 40px;
   width: 100px;
 }
+
+.emotion-button{
+  background: transparent;
+  background-repeat: no-repeat;
+  background-position: 100% 100%;
+  background-size: contain;
+ object-fit: contain;
+  height: 80px;
+  width: 80px;
+  border: none;
+}
+
+.sad-button{
+  background-image: url(images/sad.png);
+}
+.angry-button{
+  background-image: url(images/angry.png);
+}
+.confused-button{
+  background-image: url(images/confused.png);
+}
+.disgusted-button{
+  background-image: url(images/disgusted.png);
+}
+.joy-button{
+  background-image: url(images/happy.png);
+} 
